2010-06-09  Preeti Subramanian <spreeti@secpod.com>

	Buf Fix. Changed function names related to NTLMSSP by appending
	_ntlmssp. This would prevent conflicts that occur while WMI and
	NTLMSSP features co-exist.
	
	* nasl/smb_signing.c, nasl/smb_signing.h, nasl/proto.h,
	nasl/genrand.c, nasl/nasl_crypto.c, nasl/charset.h, nasl/time.c,
	nasl/ntlmssp.c, nasl/smb_crypt.c, nasl/smb_crypt.h, nasl/smb_crypt2.c,
	nasl/iconv.c, nasl/md4.c, nasl/md4.h, nasl/charcnv.c, nasl/arc4.c:
	Changed conflicting function names by appending names with _ntlmssp. 

2010-06-08  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Refactored, resolved code duplicate.

	* misc/ads_auth.c (ads_auth_bind): Removed.
	(ads_auth_bind_query): Use ldap_auth_bind instead of ads_auth_bind.
	(ads_authenticate): Use ldap_auth_bind instead of ads_auth_bind.
	Prevent login attempt without given domain.

	* misc/ldap_auth.c (ldap_auth_bind): Made non-static.

	* misc/ldap_auth.h (ldap_auth_bind): Expose.

2010-06-08  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_auth.c, misc/ldap_auth.c, misc/ads_auth.c:
	`make indent`

	* misc/resource_request.c: Added macro for file name, `make indent`.

2010-06-08  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* openvas_macros.cmake: New file containing indentation target
	definitions (refactored from base/CMakeLists).

	* misc/CMakeLists.txt, base/CMakeLists.txt: Include new file, create
	indentation targets.

2010-06-08  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* base/CMakeList.txt: Added experimental "indent" target that calls
	indent on all source files in base.

	* base/credentials.h, openvas_string.c: Indented using new make target.

2010-06-07  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Adressed openldap deprecation warnings, resolving respective todos.

	* misc/ads_auth.c (ldap_object_get_attribute_values): Changed return
	type, use ldap_get_values_len instead of ldap_get_values, copy values